name:                shieldkins
version:             0.1.0.0
synopsis:            A small tool to generate shields.io badges for Jenkins builds
-- description:
homepage:            https://github.com/CodeBlock/shieldkins/
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          relrod@redhat.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable shieldkins
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.10
                     , lens >= 4
                     , wreq >= 0.1.0.1
                     , scotty >= 0.7.2 && < 1
                     , text >= 1.1.1 && < 2
                     , transformers >= 0.3
  -- hs-source-dirs:
  default-language:    Haskell2010
